@@ -22,10 +22,10 @@ import java.security.cert.CertificateEncodingException;
 import java.security.cert.CertificateException;
 import java.security.cert.X509Certificate;
 import java.text.MessageFormat;
+import java.util.Base64;
 import java.util.Enumeration;
 import java.util.Locale;
 
-import javax.xml.bind.DatatypeConverter;
 
 /**
  * The implementation of the key store provider for the Windows Certificate Store. This class enables using keys stored in the Windows Certificate
@@ -140,7 +140,7 @@ public final class SQLServerColumnEncryptionCertificateStoreProvider extends SQL
         byte[] der = cert.getEncoded();
         md.update(der);
         byte[] digest = md.digest();
-        return DatatypeConverter.printHexBinary(digest);
+        return Base64.getEncoder().encodeToString(digest);
     }
 
     private CertificateDetails getCertificateByThumbprint(String storeLocation,
